tests/invariants/pass/type_constraints.act
constructor of AllEnvVars
interface constructor()

creates
	uint value := 5

invariants
	value >= 0
