tests/invariants/fail/constructor_indirect_assignment.act
constructor of LValue
interface constructor()

creates

	uint y := x
	uint x := 2

invariants

	y == 2
